--- a/ShopAgro/app/src/main/res/values/strings.xml
+++ b/ShopAgro/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="fb_login_protocol_scheme">fb757729248380581</string>
     <string name="shared_preference_name">com.codeshiv.shopagro.sharedpreference</string>
     <string name="product_like">Like</string>
+    <string name="product_dis_like">DisLike</string>
 </resources>
