Create username and password field and login user

--- a/ShopAgro/app/src/main/res/values/strings.xml
+++ b/ShopAgro/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="shared_preference_name">com.codeshiv.shopagro.sharedpreference</string>
     <string name="product_like">Like</string>
     <string name="product_dis_like">DisLike</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 </resources>
